crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@composite_fk_parent_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const parent = pgTable("parent", {
  id1: integer("id1").notNull(),
  id2: integer("id2").notNull(),
}, (t) => ({
  pk: primaryKey({ columns: [t.id1, t.id2] }),
}));
