crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@username_fk_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 382
expression: rendered
---
export const session = pgTable("session", {
  id: uuid("id").primaryKey(),
  username: text("username").notNull().references(() => user.username),
});

export const sessionRelations = relations(session, ({ one, many }) => ({
  usernameUser: one(user, { fields: [session.username], references: [user.username] }),
}));
