crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__server_defaults_snapshot@server_defaults_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const withDefaults = pgTable("with_defaults", {
  id: integer("id").primaryKey(),
  createdAt: timestamp("created_at", { withTimezone: true }).notNull().defaultNow(),
  status: text("status").notNull().default("active"),
  count: integer("count").notNull().default(0),
});
