crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_with_composite_fk_snapshot@table_with_composite_fk_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const lineItems = pgTable("line_items", {
  id: integer("id").primaryKey(),
  orderId: integer("order_id").notNull(),
  orderVersion: integer("order_version").notNull(),
  sku: text("sku").notNull(),
});
