crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_with_enum_snapshot@table_with_enum_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const orderStatus = pgEnum("order_status", ["pending", "shipped", "delivered"]);

export const orders = pgTable("orders", {
  id: integer("id").primaryKey(),
  status: orderStatus("status").notNull(),
});
