crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__unique_and_indexed_snapshot@unique_and_indexed_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const users = pgTable("users", {
  id: integer("id").primaryKey(),
  email: text("email").notNull().unique(),
  username: text("username").notNull().unique("uq_username"),
  department: text("department"),
  status: text("status").notNull().default("active"),
}, (t) => ({
  idxDepartment: index("idx_department").on(t.department),
}));
